# prism

./: .gitignore  00_create_null_maps.ipynb  99_testing.ipynb  LICENSE  README.md  layout.md  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml
assets/: slide_deck.pptx
docs/: cli.md  dataset.md  index.md  installation.md  permutation_analysis.md  quickstart.md  spatial_similarity.md  statistical_functions.md  usage_examples.md
docs/api/: analysis.md  dataset.md  index.md  loaders.md  utils.md
manuscript/: abstract.md  exchangeability_blocks_docs.md  manuscript.md  simplifying_freedman_lane.md
notebooks/: 00_create_synthetic_data.ipynb
prism/: data_wrangling.py  experimental.py  inference.py  loading.py  notebook_utils.py  palm_cli.py  permutation_inference.py  permutation_logic.py  preprocessing.py  prism_cli.py  prism_notebook_messages.py  spatial_similarity.py  spatial_similarity_cli.py  tfce.py  utils.py
prism/datasets/: dataset.py  utils.py
prism/stats/: __init__.py  glm.py  lr.py  miscellaneous.py
pstn/: inference.py  loading.py  palm_cli.py  stats.py
tests/: design_permutation_logic.py  inference.py  permutation_analysis.py  permutation_logic.py  spatial_correlation.py  spatial_similarity.py  test_dataset_indices.py  test_return_permutations.py  variance_group_calculation.py
